overflow on mobile fixed

--- a/css/productCard.css
+++ b/css/productCard.css
@@ -1,6 +1,3 @@
-.body {
-    overflow-x: hidden;
-}
 
 .content-top-left-item {
     width: 49%;
